# youtube

./: README.md
ep001/: .gitignore  README.md  threads-cpu-mem-lock.py  threads-cpu-mem-queue.py  threads-cpu-mem.py  threads-cpu.py  threads-io.py  utils.py
ep002/: .gitignore  README.md  example-file-base.py  example-file-ckpt-retries.py  example-file-ckpt.py  example-file-retries.py  example-file.py  example-state.py  pyproject.toml
ep002/checkpoint/: __init__.py  checkpoint.py
ep003/: README.md
ep004/: README.md
ep004/1_hello_led/: CMakeLists.txt  sdkconfig
ep004/1_hello_led/main/: CMakeLists.txt  main.c
ep004/2_hello_wifi/: sdkconfig  sdkconfig.old
ep004/2_hello_wifi/main/: CMakeLists.txt  Kconfig.projbuild  main.c  wifi_connect.c
ep004/3_hello_server/: CMakeLists.txt  sdkconfig.old
ep004/3_hello_server/data/: index.html
ep004/3_hello_server/main/: http_server.c  http_server.h  main.c  wifi_connect.c  wifi_connect.h
ep004/4_hello_server_endpoints/: sdkconfig  sdkconfig.old
ep004/4_hello_server_endpoints/data/: index.html
ep004/4_hello_server_endpoints/main/: CMakeLists.txt  http_server.c  main.c
ep005/: README.md
ep006/: CMakeLists.txt  cpu.cpp  kernel.cu  thrust.cu
